@@ -1,66 +1,62 @@
 <!-- markdownlint-disable MD033 -->
 <p align="center">
-  <a href="https://powernukkitx.org"><img src=".github/logo.png" alt="PowerNukkitX Logo" width="150"></a>
+    <a href="https://powernukkitx.org">
+      <img src="https://avatars.githubusercontent.com/u/99014792" width=20% alt="PNX Logo">
+    </a>
+    <p align="center">
+        <strong>
+            A Minecraft Bedrock Edition Server Software, open source and written in java
+            <br>
+            Not affiliated with Mojang AB.
+        </strong>
+    </p>
 </p>
 
 <p align="center">
-  <strong>A Minecraft Bedrock Edition Server Software, open source and written in java</strong>
-</p>
-
-<p align="center">
-  <img src="https://img.shields.io/badge/version-3.0.0-blue.svg?cacheSeconds=2592000" alt="Version">
-  <img src="https://img.shields.io/badge/minecraft-v26.30%20(Bedrock)-56383E" alt="Minecraft">
-  <img src="https://img.shields.io/badge/protocol-1001-blue" alt="Protocol">
+  <img src="https://img.shields.io/github/v/release/PowerNukkitX/PowerNukkitX?label=version&sort=semver" alt="Version">
+  <img src="https://img.shields.io/badge/minecraft-v26.45%20(Bedrock)-56383E" alt="Minecraft">
+  <img src="https://img.shields.io/badge/protocol-2169-blue" alt="Protocol">
   <img src="https://img.shields.io/badge/action-all%20builds-FF9B21" alt="Action">
   <img src="https://img.shields.io/discord/944227466912870410?label=discord&color=7289DA&logo=discord" alt="Discord">
   <img src="https://img.shields.io/badge/documentation-yes-brightgreen.svg" alt="Documentation">
   <img src="https://codecov.io/github/PowerNukkitX/PowerNukkitX/graph/badge.svg?token=84HDP13KC3" alt="Codecov">
+  <img src="https://app.codacy.com/project/badge/Grade/756e509c721e4c7296ec98bca95194d9" alt="Codacy">
   <img src="https://img.shields.io/badge/License-LGPL--3-yellow.svg" alt="License">
 </p>
 
-<!-- markdownlint-enable MD033 -->
+<br>
 
 **Feature-rich, highly customizable third-party server software for Minecraft: Bedrock Edition.**
 
-- 🪄 **Custom Item, Block and Entity support**
-- 🤖 **Vanilla-like Mob AI**
-- 🪴 **Terra Generator**
-- ✏️ **Full Vanilla Command Support**
-- 🗃️ **Full Item, Block and Container Support**
-- 🗿 **More features to discover...**
+- 🪄 Custom Item, Block and Entity support
+- 🤖 Vanilla-like Mob AI
+- 🪴 Vanilla World Generation
+- ✏️ Full Vanilla Command Support
+- 🗃️ Full Item, Block and Container Support
+- 🗿 More features to discover...
 
-## Install
+## 🛠️ Getting Started
 
-1. Make sure you have `JDK21` installed, if not [download from here](https://www.graalvm.org/downloads)
-2. Download the [`powernukkitx.jar`](https://github.com/PowerNukkitX/PowerNukkitX/releases/download/snapshot/powernukkitx.jar)
-3. Get your start script [here](https://github.com/PowerNukkitX/scripts/tree/master)
+To get started, check out our [documentation](https://powernukkitx.org/docs/).
 
-## Usage
+## ❤️ Community & Support
 
-Starting PowerNukkitX
+Join our [Discord](https://discord.gg/apwd7uauZg) server to chat with other users, developers and server owners.
 
-```sh
-java -jar --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED .\powernukkitx.jar
-```
+## 🌟 Plugins
 
-If you use a newer java version (greater than 21) you have to use one of the [startup scripts.](https://github.com/PowerNukkitX/scripts/tree/master)
-
-## Community & Support
-
-Join our [Discord](https://discord.gg/apwd7uauZg) server to chat with other users and developers.
+Browse community-made plugins for your server in our [Plugin Hub](https://powernukkitx.org/plugins).<br />
+Want to create your own? Our [documentation](https://powernukkitx.org/docs/development) will help you get started.
 
 ## 🤝 Contributing to PowerNukkitX
 
-Contributions, issues and feature requests are welcome!
-Feel free to
-check [issues page](https://github.com/PowerNukkitX/PowerNukkitX/issues). You can also take a look at
-the [contributing guide](.github/CONTRIBUTING.md).
-
-[![Contributors](https://contrib.rocks/image?repo=PowerNukkitX/PowerNukkitX)](https://github.com/PowerNukkitX/PowerNukkitX/graphs/contributors)
+Contributions, issues and feature requests are welcome!<br />
+Feel free to check [issues page](https://github.com/PowerNukkitX/PowerNukkitX/issues). Also take a look at
+the [contributing guide](./CONTRIBUTING.md).
 
 ## Give a ⭐️ if this project helped you
 
-[![Stargazers over time](https://starchart.cc/PowerNukkitX/PowerNukkitX.svg?variant=adaptive)](https://starchart.cc/PowerNukkitX/PowerNukkitX)
+[![Contributors](https://contrib.rocks/image?repo=PowerNukkitX/PowerNukkitX)](https://github.com/PowerNukkitX/PowerNukkitX/graphs/contributors)
 
 ## 📝 License Information
 
